<resources>
    <string name="app_name">FilmSearch</string>
    <string name="title_list">Каталог</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_search">Поиск</string>
    <string name="title_settings">Настройки</string>
    <string name="film_list">Каталог</string>

    <string name="film_details">Описание фильма</string>
    <string name="title_text">Название</string>
    <string name="original_title_text">Оригинальное название</string>
    <string name="genre_text">Жанр</string>
    <string name="country_text">Страна</string>
    <string name="popularity_text">Рейтинг</string>
    <string name="budget_text">Бюджет</string>
    <string name="revenue">Сборы</string>
    <string name="release_date">Дата релиза</string>
    <string name="overview_text">Обзор</string>
    <string name="director_text">Режисcёр</string>
    <string name="cast_text">В ролях</string>
    <string name="adult_date">Возрастной ценз</string>
    <string name="adult_empty">0+</string>
    <string name="genre_name">Жанр</string>
    <string name="test_long_text">spodfijo sdfjiij sdfjfopa jiijasdf sdfjop dsaf sdf  sdfa sasdf as  we se sdf sd fsdfsdfsdf dsf weew xcf sad fasef se f dsfsdf sdfsd fsd fs fsd sdfrggfhrvxcv cfvdfew"</string>
    <string name="empty_field">-</string>

    <string name="selected_film">selected_film</string>
    <string name="menu_title_add_to_favorites">Добавить к избранным</string>
    <string name="menu_title_remove_from_favorites">Удалить из избранных</string>
    <string name="favorites_film_list">Избранные фильмы</string>
    <string name="google_maps">Карта</string>

    <string name="search_option_name">Название</string>
    <string name="search_option_years_name">Годы</string>

    <string name="search_option_genre_name">Жанр</string>
    <string name="search_option_country_name">Страна</string>
    <string name="search_option_popularity_name">Рейтинг</string>

    <string name="search_option_default_genre">все</string>
    <string name="search_option_default_name">все</string>
    <string name="search_options_start_searching">Найти</string>

    <string name="kinoPoisk_theme_name">Кинопоиск</string>
    <string name="lime_theme_name">Лайм</string>
    <string name="genre_list_title">Список жанров:</string>
    <string name="theme_list_title">Выбор темы приложения:</string>

    <string name="maps">Карты</string>
    <string name="default_location_name">США</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>