<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/list_48"
        android:orderInCategory="10"
        android:title="@string/title_list"/>

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/favorites_48"
        android:orderInCategory="20"
        android:title="@string/title_favorites"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search"
        android:orderInCategory="30"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings_48"
        android:orderInCategory="40"
        android:title="@string/title_settings"/>
</menu>